# C_make

./: CMakeLists.txt  DMA.c  EVEN ODD SUM ARRAY.cpp  Mul.c  SIVA.c  add.c  array10number.c  average.c  averagealt.c  bubble sort.cpp  calculator.c  countdigit.c  difference.c  divide.c  divisionalt.c  divisionarray.c  dowhile50.c  even.c  evenarray.c  factorial.c  factors.c  fibonacci1.c  fileHandling.c  first&lastdigit.c  frequency.c  function50even.c  functionadd(1).c  functionadd.c  functionadd1.c  functionadd2.c.c  functionadd3(1).c  functionadd3.c  functionarmstrong(1).c  functionaverage(1).c  functionaverage.c  functionaverage1(1).c  functioncount.c  functiondivide1.c  functiondivide2(1).c  functiondivision(1).c  (+58 more)
